# Simple_plugin_framework

./: .gitignore  CMakeLists.txt  compare_report.html  file1.json  file2.json  input.json  output.json  output_add.json  report.html  report.txt  run.sh  workflow.json
code/threadpool/: ThreadPool.cpp
data/: report.txt
doc/: architecture.md  architecture.puml  architecture_ascii.txt  demo.md  modules_ascii.txt
docs/: architecture.md  architecture.puml  design.md
include/config/: ConfigParser.hpp
include/core/: IJsonProcess.hpp  IObject.hpp  PluginManager.hpp
include/runtime/: EventBus.hpp  Services.hpp  ThreadPool.hpp
include/ui/: console_ui.hpp
include/workflow/: Executor.hpp  ITask.hpp  ITaskContext.hpp  Tasks.hpp  Workflow.hpp  WorkflowParser.hpp
plugins/json_compare/: CMakeLists.txt  JsonComparator.cpp
plugins/json_compare/core/: IJsonProcess.hpp  IObject.hpp  ISimple.hpp
plugins/json_compare/include/: CmakeLists.txt
plugins/json_process/: CMakeLists.txt  JsonProcess.cpp
plugins/json_process/core/: IComparator.hpp
plugins/simple/: CMakeLists.txt  README.txt  SimplePlugin.cpp
scripts/: create_dirs.sh  monitor_perf.sh
src/: test.cpp
src/app/: main.cpp
src/config/: ConfigParser.cpp
src/runtime/: Services.cpp
src/threadpool/: threadpool.cpp
src/ui/: console_ui.cpp
src/workflow/: Executor.cpp  WorkflowParser.cpp
